force-app/main/default/objects/Field_Sales_Visit__c/Field_Sales_Visit__c.object-meta.xml
<CustomObject>
    <label>Field Sales Visit</label>
    <nameField>
        <displayFormat>FSV-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Sales Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>