force-app/main/default/objects/Field_Sales_Visit__c/fields/Current_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Current_Supplier__c</fullName>
    <label>Current Supplier</label>
    <length>80</length>
    <type>Text</type>
</CustomField>