force-app/main/default/objects/Field_Sales_Visit__c/fields/Field_Sales_Email__c.field-meta.xml
<CustomField>
    <fullName>Field_Sales_Email__c</fullName>
    <label>Field Sales Email</label>
    <type>Email</type>
</CustomField>