force-app/main/default/objects/Field_Sales_Visit__c/fields/Field_Sales_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Sales_First_Name__c</fullName>
    <label>Field Sales First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>