force-app/main/default/objects/Field_Sales_Visit__c/fields/Field_Sales_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Sales_Last_Name__c</fullName>
    <label>Field Sales Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>