force-app/main/default/objects/Field_Sales_Visit__c/fields/Field_Sales_Notes__c.field-meta.xml
<CustomField>
    <fullName>Field_Sales_Notes__c</fullName>
    <label>Field Sales Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>