force-app/main/default/objects/Field_Sales_Visit__c/fields/Field_Sales_Phone__c.field-meta.xml
<CustomField>
    <fullName>Field_Sales_Phone__c</fullName>
    <label>Field Sales Phone</label>
    <type>Phone</type>
</CustomField>