force-app/main/default/objects/Field_Sales_Visit__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Field Sales Visits</relationshipLabel>
    <relationshipName>Field_Sales_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>