force-app/main/default/objects/Field_Sales_Visit__c/fields/Level_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Interest__c</fullName>
    <label>Level of Interest</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>